# pixel_game

./: Cargo.toml  LICENSE  README.md
examples/character_walking_around/: Cargo.toml
examples/character_walking_around/src/: main.rs
examples/physics/: main.rs
examples/physics_test/: Cargo.toml  main.rs
examples/physics_test/src/: main.rs
src/: color.rs  game.rs  lib.rs  main.rs  mat.rs  tuple2.rs  vec.rs  vec2.rs
src/lib/: color.rs  drawable.rs  game.rs  lib.rs  mat.rs  mat_trait.rs  object.rs  physics.rs  resources.rs  shape.rs  uv_map.rs  vec.rs  vec2.rs
src/lib/game/: display.rs  grid.rs  object.rs  physics.rs
src/lib/mat/: enumerate.rs  mat_slice.rs  sliced_mat.rs
src/lib/object/: hitbox.rs
